# Proxy

./: .gitignore  .vc-installed-files  AGENTS.md  README.md  proxy_manager.spec  pyproject.toml
.claude/: .vcignore  launch.json
.claude/agents/: vc-execute-agent.md  vc-fast-mode-agent.md  vc-innovate-agent.md  vc-plan-agent.md  vc-quick-fix-agent.md  vc-research-agent.md  vc-tester.md  vc-validate-agent.md
.codex/: config.toml  hooks.json
.codex/agents/: vc-code-reviewer.toml  vc-code-simplifier.toml  vc-debugger.toml  vc-execute-agent.toml  vc-fast-mode-agent.toml  vc-git-manager.toml  vc-innovate-agent.toml  vc-plan-agent.toml  vc-quick-fix-agent.toml  vc-research-agent.toml  vc-spec-agent.toml  vc-tester.toml  vc-ui-ux-designer.toml  vc-update-process-agent.toml  vc-validate-agent.toml
.codex/hooks/: descriptive-name.cjs  post-edit-simplify-reminder.cjs  scout-block.cjs  session-init.cjs  subagent-init.cjs
docs/: layer-b-design.md  network-monitoring-detection-test-plan.md
process/_seeds/: _GUIDE.md
process/development-protocols/: autopilot.md  plan-lifecycle.md  vc-autoresearch-spec.md
src/proxy_manager/: __init__.py  cli.py  db.py  gateway.py  http_client.py  launcher.py  leak_test.py  models.py  profile_manager.py  proxy_pool.py  socks_client.py  upstream.py
tests/: conftest.py  test_db.py  test_gateway.py  test_http_client.py  test_launcher.py  test_layerb_driver.py  test_layerb_pid_map.py  test_layerb_redirector.py  test_leak_test.py  test_profile_manager.py  test_proxy_pool.py  test_socks_client.py  test_web_app.py
(+31 files in other folders)
