[project]
name = "proxy-manager"
version = "0.1.0"
description = "Multi-instance proxy manager: gan IP rieng cho tung app tren cung 1 may"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "psutil>=5.9",
    "pydantic>=2.6",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "httpx>=0.27", "pyinstaller>=6.6", "pydivert>=2.1"]
# Layer B (ep dinh tuyen tang he thong) can WinDivert. Cai rieng: pip install -e ".[layerb]"
# Chi hoat dong tren Windows + quyen Administrator.
layerb = ["pydivert>=2.1"]

[project.scripts]
proxy-manager = "proxy_manager.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
